--- a/app/src/main/res/layout/rec_search_item.xml
+++ b/app/src/main/res/layout/rec_search_item.xml
@@ -6,7 +6,7 @@
     app:cardCornerRadius="6dp"
     android:layout_margin="4dp"
     app:cardElevation="6dp"
-    app:cardBackgroundColor="@color/cardview_light_background">
+    app:cardBackgroundColor="@color/green">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -24,11 +24,14 @@
 
         <TextView
             android:id="@+id/name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/avatar"
+            />
 
         <TextView
             android:id="@+id/idUsers"
@@ -36,7 +39,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name"   />
+            app:layout_constraintTop_toBottomOf="@+id/name" />
         <TextView
             android:id="@+id/lastGame"
             android:layout_width="0dp"
@@ -45,8 +48,6 @@
             app:layout_constraintTop_toBottomOf="@id/idUsers"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/avatar"
-            xmlns:tools="http://schemas.android.com/tools"
-            tools:text="ssssssssssssssssssssssssssssssssssssssssssssss"
             />
 
 
