--- a/app/src/main/res/layout/sort_activity.xml
+++ b/app/src/main/res/layout/sort_activity.xml
@@ -4,33 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/mortred_background"
     tools:context=".SortActivity">
+
 
     <Button
         android:id="@+id/searchUsers"
+        style="@android:style/Widget.Holo.Button.Toggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Поиск игроков"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        android:background="@color/tide_tide_background"
+        android:text="ПОИСК ИГРОКОВ"
+        android:textColor="@color/white"
+        android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/button"
-        app:layout_constraintHorizontal_bias="0.13"
-        app:layout_constraintStart_toStartOf="parent" />
-
-
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button" />
 
     <Button
         android:id="@+id/button"
+        style="@android:style/Widget.Holo.Button.Toggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="287dp"
-        android:layout_marginTop="51dp"
-        android:layout_marginEnd="30dp"
-        android:background="@color/teal_200"
-        android:text="Загрузить"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:background="@color/indigo"
+        android:text="СПИСОК ПЕРСОНАЖЕЙ"
         android:textColor="@color/white"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/searchUsers"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TextContrastCheck" />
 
