--- a/app/src/main/res/layout/fragment_heroes.xml
+++ b/app/src/main/res/layout/fragment_heroes.xml
@@ -4,10 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
+
     <Button
         android:id="@+id/button_choice"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:backgroundTint="@color/teal_700"
@@ -20,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
+
 
 
 
