--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -4,20 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/mortred_background"
-    tools:context=".SortActivity">
+    android:background="@color/white"
+    tools:context=".MainActivity">
+
     <androidx.fragment.app.FragmentContainerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:id="@+id/fragment_view"/>
-
-
-
-
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -29,9 +26,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:menu="@menu/bottom_menu"
-        app:itemIconTint="@android:color/white"
-        app:itemTextColor="@android:color/white"
-        android:background="@color/purple_500"/>
+        app:itemIconTint="@color/bottom_color"
+        app:itemTextColor="@color/bottom_color"
+        android:background="@color/purple_500"
+        app:itemRippleColor="@color/green"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
