--- a/app/src/main/res/layout/agi_str_int.xml
+++ b/app/src/main/res/layout/agi_str_int.xml
@@ -8,10 +8,12 @@
         android:id="@+id/attr_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/atrr_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:textStyle="bold" />
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
