--- a/app/src/main/res/layout/fragment_special_hero.xml
+++ b/app/src/main/res/layout/fragment_special_hero.xml
@@ -9,32 +9,55 @@
         android:id="@+id/heroName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/iconHero" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/role"
+        android:id="@+id/turboWin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/heroName"
-        app:layout_constraintRight_toLeftOf="@+id/kda"
         app:layout_constraintLeft_toLeftOf="parent" />
 
-    <TextView
-        android:id="@+id/kda"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/iconHero"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/role" />
 
     <ImageView
         android:id="@+id/iconHero"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <include
+        android:id="@+id/start"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/iconHero"
+        android:layout_marginTop="10dp"
+        layout="@layout/items_favorite" />
+
+    <include
+        android:id="@+id/early"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/items_favorite"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/start" />
+
+    <include
+        android:id="@+id/mid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/items_favorite"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/early" />
+
+    <include
+        android:id="@+id/late"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/items_favorite"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/mid" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
